--- a/Bitrise/View/Base.lproj/Main.storyboard
+++ b/Bitrise/View/Base.lproj/Main.storyboard
@@ -726,10 +726,22 @@
                                             <segue destination="u6Y-Oa-61p" kind="show" identifier="BRAccountsViewController" id="TTC-OE-mVR"/>
                                         </connections>
                                     </button>
+                                    <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="f5y-Qd-gVZ">
+                                        <rect key="frame" x="199" y="8" width="82" height="23"/>
+                                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="HFv-pC-J4p">
+                                            <font key="font" metaFont="system"/>
+                                            <segments>
+                                                <segment image="NSListViewTemplate" width="46" selected="YES"/>
+                                                <segment image="NSPathTemplate" width="29" tag="1"/>
+                                            </segments>
+                                        </segmentedCell>
+                                    </segmentedControl>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="8RC-1p-PQm"/>
+                                    <constraint firstItem="f5y-Qd-gVZ" firstAttribute="centerY" secondItem="82J-cI-jpS" secondAttribute="centerY" id="Idn-wq-A7X"/>
                                     <constraint firstItem="nqv-oN-Zd6" firstAttribute="centerY" secondItem="82J-cI-jpS" secondAttribute="centerY" id="If8-4g-bDc"/>
+                                    <constraint firstItem="f5y-Qd-gVZ" firstAttribute="centerX" secondItem="82J-cI-jpS" secondAttribute="centerX" id="OhZ-oJ-Q5B"/>
                                     <constraint firstAttribute="trailing" secondItem="nqv-oN-Zd6" secondAttribute="trailing" constant="10" id="TX3-Qv-Jx2"/>
                                 </constraints>
                             </customView>
@@ -1030,6 +1042,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="NSListViewTemplate" width="14" height="10"/>
+        <image name="NSPathTemplate" width="16" height="10"/>
         <image name="NSUser" width="32" height="32"/>
     </resources>
 </document>
